--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
-<p>Hello, world!</p>
+<!DOCTYPE html>
+<html lang="en">
 
-<p>
-    William Shakespeare's <em>Sonnets</em> consist of 154 poems, each 
-fourteen 
-    lines long (three
-    <a href="https://en.wikipedia.org/wiki/Quatrain">quatrains</a> 
-    followed by a rhyming
-    <a href="https://en.wikipedia.org/wiki/Couplet">couplet</a>).
-    <strong>Sonnet 18</strong> is perhaps the most famous, and begins
-    like this:
-</p>
-<blockquote>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Title</title>
+</head>
+
+<body>
+    <p>Hello, world!</p>
     <p>
-        Shall i compare thee to a summer's day? <br>
-        Thou art more lovely and more temperate.
+        William Shakespeare's <em>Sonnets</em> consist of 154 poems, each fourteen lines long (three
+        <a href="https://en.wikipedia.org/wiki/Quatrain">quatrains</a> followed by a rhyming <a href="https://en.wikipedia.org/wiki/Couplet">couplet</a>). <strong>Sonnet 18</strong> is perhaps the most famous, and begins like this:
     </p>
-</blockquote>
+    <blockquote>
+        <p>
+            Shall i compare thee to a summer's day? <br>
+            Thou art more lovely and more temperate.
+        </p>
+    </blockquote>
+</body>
+
+</html>
