--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-    <p>Hello, world!</p>
+    <h1>The Learn Enough Story</h1>
+    <h2>Background</h2>
+    <h2>Founders</h2>
+    <h3>Michael Hartl</h3>
+    <h3>Lee Donahoe</h3>
+    <h3>Nick Merwin</h3>
+    <!-- <p>Hello, world!</p>
     <p>
         William Shakespeare's <em>Sonnets</em> consist of 154 poems, each fourteen lines long (three
         <a href="https://en.wikipedia.org/wiki/Quatrain">quatrains</a> followed by a rhyming <a href="https://en.wikipedia.org/wiki/Couplet">couplet</a>). <strong>Sonnet 18</strong> is perhaps the most famous, and begins like this:
@@ -22,8 +28,7 @@
     </blockquote>
     Jean Valjean <br>
     55 Rue Plumet <br>
-    Amonate, VA 24601
-
+    Amonate, VA 24601 -->
 </body>
 
 </html>
