--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </p>
     <h2>Founders</h2>
     <h3>Michael Hartl</h3>
+    <img src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150" alt="Michael Hartl">
     <p>
         Michael is the creator of the <a href="https://www.railstutorial.org/" target=“_blank” rel=”noopener”>Ruby on Rails Tutorial</a> and principal author of the <a href="https://www.learnenough.com/" target=“_blank” rel=”noopener”>Learn Enough to Be Dangerous</a>
         introductory sequence. He is an advanced student of <a href="https://www.kravmaga.com/" target=“_blank” rel=”noopener”>Krav Maga</a> and has a three-step plan for world domination. Rumors that he's secretly a supervillain are slightly exaggerated.
@@ -44,6 +45,7 @@
         <a href="https://twitter.com/mhartl" target="_blank" rel="noopener">here</a>.
     </p>
     <h3>Lee Donahoe</h3>
+    <img src="https://gravatar.com/avatar/b65522a6f3a6899705d119d7aa232a6d?s=150" alt="Lee Donahoe">
     <p>
         When he's not literally swimming with sharks or hunting powder stashes on his snowboard, you can find Lee in front of his computer designing interfaces, doing front-end development, or writing some of the interface-related Learn Enough tutorials.
         </p>
@@ -52,6 +54,7 @@
         <a href="https://twitter.com/leedonahoe" target="_blank" rel="noopener">here</a>.
     </p>
     <h3>Nick Merwin</h3>
+    <img src="https://gravatar.com/avatar/e2d6ce2ba5c1b6d674ae8ff2b3b45d23?s=150" alt="Nick Merwin">
     <p>
         You may have seen him shredding guitar live with Capital Cities on Jimmy Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true nerd at heart. He's just as happy shredding well-spec'd lines of code from a tour bus as he is from his kitchen table.
     </p>
@@ -59,20 +62,6 @@
         You should follow Nick on Twitter
         <a href="https://twitter.com/nickmerwin" target="_blank" rel="noopener">here</a>.
     </p>
-    <!-- <p>Hello, world!</p>
-    <p>
-        William Shakespeare's <em>Sonnets</em> consist of 154 poems, each fourteen lines long (three
-        <a href="https://en.wikipedia.org/wiki/Quatrain">quatrains</a> followed by a rhyming <a href="https://en.wikipedia.org/wiki/Couplet">couplet</a>). <strong>Sonnet 18</strong> is perhaps the most famous, and begins like this:
-    </p>
-    <blockquote>
-        <p>
-            Shall i compare thee to a summer's day? <br>
-            Thou art more lovely and more temperate.
-        </p>
-    </blockquote>
-    Jean Valjean <br>
-    55 Rue Plumet <br>
-    Amonate, VA 24601 -->
 </body>
 
 </html>
