--- a/index.html
+++ b/index.html
@@ -19,9 +19,18 @@
             href="https://learnenough.com/email" target=“_blank” rel=”noopener”>sign up for our official email list now.</a>
     </p>
     <p>
+        <a href="https://twitter.com/learnenough" target="_blank"
+        rel="noopener" style="text-decoration: none;">
+        <img src="/img/Webp.net-resizeimage.png">
+        </a>
+        You should follow Learn Enough on Twitter
+        <a href="https://twitter.com/learnenough"
+        target="_blank" rel="noopener">here</a>.
+        </p>
+    <p>
         HTML was created by the original "web developer", computer scientist <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee" target="_blank" rel="noopener noreferrer nofollow">Tim Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to share pictures of his cat, but it would be cool if it were.
     </p>
-    <img src="img/Cat.bmp" alt="An adorable kitten">
+    <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329"><img src="img/Cat.bmp" alt="An adorable kitten"></a>
     <h2>Background</h2>
     <p>
         Learn enough to Be Dangerous is an outgrowth of the <a href="https://railstutorial.org/" target=“_blank” rel=”noopener”>Ruby on Rails
