changed twitter logo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p>
         <a href="https://twitter.com/learnenough" target="_blank"
         rel="noopener" style="text-decoration: none;">
-        <img src="/img/Webp.net-resizeimage.png">
+        <img src="/img/twitterLogoSmall.png">
         </a>
         You should follow Learn Enough on Twitter
         <a href="https://twitter.com/learnenough"
