Add a Moby Dick page and a menu

--- a/tags.html
+++ b/tags.html
@@ -7,7 +7,15 @@
     <title>Tags</title>
 </head>
 <body>
+
+    <div>
+        <a href="index.html">Home</a>
+        <a href="moby_dick.html">Moby Dick</a>
+        <a href="tags.html">HTML Tags</a>
+      </div>
+
     <h1>Important HTML tags</h1>
+
     <img src="img/trooper.jpg" alt="Tagged Astronaut">
 <p>
     This page is designed as a quick reference for some of the common tags covered in <a href="https://learnenough.com/html"><em>here</em></a>. In the process of making it, we'll learn how to make HTML <em>tables</em> via <code>table</code> and related tags.
@@ -98,6 +106,60 @@
             <td>define a piece of computer code</td>
             <td><code>&lt;code&gt;insert code here&lt;/code&gt;</code></td>
             <td><code>insert code here</code></td>
+        </tr>
+        <tr>
+            <td><code>header</code></td>
+            <td>header</td>
+            <td>container for introductory content or a set of navigational links</td>
+            <td><code>&lt;header&gt;content here&lt;/header&gt;</code></td>
+            <td><header>content here</header></td>
+        </tr>
+        <tr>
+            <td><code>div</code></td>
+            <td>div</td>
+            <td>define a division or a section</td>
+            <td><code>&lt;div&gt;content here&lt;/div&gt;</code></td>
+            <td><div>div content here</div></td>
+        </tr>
+        <tr>
+            <td><code>span</code></td>
+            <td>span</td>
+            <td>inline container used to mark up a part of a text</td>
+            <td><code>&lt;span&gt;text here&lt;/span&gt;</code></td>
+            <td><span>text here</span></td>
+        </tr>
+        <tr>
+            <td><code>ol</code></td>
+            <td>Ordered list</td>
+            <td>defines an ordered list</td>
+            <td><code>&lt;ol&gt;one or multiple li here&lt;/ol&gt;</code></td>
+            <td>
+                <ol>
+                    <li>list item</li>
+                    <li>list item</li>
+                    <li>list item</li>
+                </ol>
+            </td>
+        </tr>
+        <tr>
+            <td><code>ul</code></td>
+            <td>Unordered list</td>
+            <td>defines an unordered (bulleted) list</td>
+            <td><code>&lt;ul&gt;one or multiple li here&lt;/ul&gt;</code></td>
+            <td>
+                <ul>
+                    <li>list item</li>
+                    <li>list item</li>
+                    <li>list item</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <td><code>li</code></td>
+            <td>List item</td>
+            <td>defines a list item</td>
+            <td><code>&lt;li&gt;List item inside&lt;/li&gt;</code></td>
+            <td><li>List item</li></td>
         </tr>
     </table>
 </body>
