--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   </head>
 
   <body>
+
+    <div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
+
     <h1>The Learn Enough Story</h1>
+
     <p>
       Learn Enough to Be Dangerous is a leader in the movement to teach
       technical sophistication, the seemingly magical ability to take command of
