--- a/index.html
+++ b/index.html
@@ -1,150 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learn enough</title>
-  </head>
+    <link rel="stylesheet" href="css/main.css">
+</head>
 
-  <body>
+<body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+    <div id="main-nav" class="nav-menu">
+        <a href="index.html" class="single-a">Home</a>
+        <a href="tags.html" class="nav-spacing">HTML Tags</a>
+        <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
     </div>
 
     <h1>The Learn Enough Story</h1>
 
     <p>
-      Learn Enough to Be Dangerous is a leader in the movement to teach
-      technical sophistication, the seemingly magical ability to take command of
-      your computer and get it to do your bidding. This includes everything from
-      command lines and coding to guessing keyboard shortcuts, Googling error
-      messages, and knowing when to just reboot the darn thing. We believe there
-      are <strong><em>at least a billion people</em></strong> who can benefit
-      from learning technical sophistication, probably more. To join our
-      movement,
-      <a href="https://learnenough.com/email" target="“_blank”" rel="”noopener”"
-        >sign up for our official email list now.</a
-      >
+        Learn Enough to Be Dangerous is a leader in the movement to teach
+        technical sophistication, the seemingly magical ability to take command of
+        your computer and get it to do your bidding. This includes everything from
+        command lines and coding to guessing keyboard shortcuts, Googling error
+        messages, and knowing when to just reboot the darn thing. We believe there
+        are <strong><em>at least a billion people</em></strong> who can benefit
+        from learning technical sophistication, probably more. To join our
+        movement,
+        <a href="https://learnenough.com/email" target="“_blank”" rel="”noopener”">sign up for our official email list
+            now.</a>
     </p>
     <p>
-      <a
-        href="https://twitter.com/learnenough"
-        target="_blank"
-        rel="noopener"
-        style="text-decoration: none"
-      >
-        <img src="./img/twitterLogoSmall.png" alt="twitterLogo" />
-      </a>
-      You should follow Learn Enough on Twitter
-      <a href="https://twitter.com/learnenough" target="_blank" rel="noopener"
-        >here</a
-      >.
+        <a href="https://twitter.com/learnenough" target="_blank" rel="noopener" style="text-decoration: none">
+            <img src="./img/twitterLogoSmall.png" alt="twitterLogo" />
+        </a>
+        You should follow Learn Enough on Twitter
+        <a href="https://twitter.com/learnenough" target="_blank" rel="noopener">here</a>.
     </p>
     <p>
-      HTML was created by the original "web developer", computer scientist
-      <a
-        href="https://en.wikipedia.org/wiki/Tim_Berners-Lee"
-        target="_blank"
-        rel="noopener noreferrer nofollow"
-        >Tim Berners-Lee</a
-      >. It's not true that Sir Tim invented HTML in order to share pictures of
-      his cat, but it would be cool if it were.
+        HTML was created by the original "web developer", computer scientist
+        <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee" target="_blank" rel="noopener noreferrer nofollow">Tim
+            Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to share pictures of
+        his cat, but it would be cool if it were.
     </p>
-    <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329"
-      ><img src="img/Cat.bmp" alt="An adorable kitten"
-    /></a>
+    <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329"><img src="img/Cat.bmp"
+            alt="An adorable kitten" /></a>
+
+    <h2>Quotations</h2>
+    <p>
+        In addition to hosting most of the world's supply of kitten videos, the Web is also full of inspiring quotes,
+        perhaps none more so than this one:
+    </p>
+
+    <blockquote style="padding: 2px 20px; background: #d8d0d0;">
+        <p><em>Don't believe every quote you read on the Internet.</em>
+            <br>
+            &ndash;Abraham Lincoln
+        </p>
+    </blockquote>
+
     <h2>Background</h2>
     <p>
-      Learn enough to Be Dangerous is an outgrowth of the
-      <a href="https://railstutorial.org/" target="“_blank”" rel="”noopener”"
-        >Ruby on Rails Tutorial</a
-      >
-      and the
-      <a href="https://www.softcover.io/" target="“_blank”" rel="”noopener”"
-        >Softcover publishing platform</a
-      >. This page is part of the sample site for
-      <a
-        href="https://www.learnenough.com/html"
-        target="“_blank”"
-        rel="”noopener”"
-        ><em>Learn Enough HTML to Be Dangerous</em></a
-      >, which teaches the basics of
-      <strong>H</strong
-      >yper<strong>T</strong>ext<strong>M</strong>arkup<strong>L</strong>anguage,
-      the universal language of the World Wide Web. Other related tutorials can
-      be found at
-      <a href="https://www.learnenough.com/" target="“_blank”" rel="”noopener”"
-        >learnenough.com</a
-      >.
+        Learn enough to Be Dangerous is an outgrowth of the
+        <a href="https://railstutorial.org/" target="“_blank”" rel="”noopener”">Ruby on Rails Tutorial</a>
+        and the
+        <a href="https://www.softcover.io/" target="“_blank”" rel="”noopener”">Softcover publishing platform</a>. This
+        page
+        is part of the sample site for
+        <a href="https://www.learnenough.com/html" target="“_blank”" rel="”noopener”"><em>Learn Enough HTML to Be
+                Dangerous</em></a>, which teaches the basics of
+        <strong>H</strong>yper<strong>T</strong>ext<strong>M</strong>arkup<strong>L</strong>anguage,
+        the universal language of the World Wide Web. Other related tutorials can
+        be found at
+        <a href="https://www.learnenough.com/" target="“_blank”" rel="”noopener”">learnenough.com</a>.
     </p>
     <h2>Founders</h2>
     <h3>Michael Hartl</h3>
-    <img
-      src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150"
-      alt="Michael Hartl"
-    />
+    <img src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150" alt="Michael Hartl" />
     <p>
-      Michael is the creator of the
-      <a
-        href="https://www.railstutorial.org/"
-        target="“_blank”"
-        rel="”noopener”"
-        >Ruby on Rails Tutorial</a
-      >
-      and principal author of the
-      <a href="https://www.learnenough.com/" target="“_blank”" rel="”noopener”"
-        >Learn Enough to Be Dangerous</a
-      >
-      introductory sequence. He is an advanced student of
-      <a href="https://www.kravmaga.com/" target="“_blank”" rel="”noopener”"
-        >Krav Maga</a
-      >
-      and has a three-step plan for world domination. Rumors that he's secretly
-      a supervillain are slightly exaggerated.
+        Michael is the creator of the
+        <a href="https://www.railstutorial.org/" target="“_blank”" rel="”noopener”">Ruby on Rails Tutorial</a>
+        and principal author of the
+        <a href="https://www.learnenough.com/" target="“_blank”" rel="”noopener”">Learn Enough to Be Dangerous</a>
+        introductory sequence. He is an advanced student of
+        <a href="https://www.kravmaga.com/" target="“_blank”" rel="”noopener”">Krav Maga</a>
+        and has a three-step plan for world domination. Rumors that he's secretly
+        a supervillain are slightly exaggerated.
     </p>
     <p>
-      You should follow Michael on Twitter
-      <a href="https://twitter.com/mhartl" target="_blank" rel="noopener"
-        >here</a
-      >.
+        You should follow Michael on Twitter
+        <a href="https://twitter.com/mhartl" target="_blank" rel="noopener">here</a>.
     </p>
     <h3>Lee Donahoe</h3>
-    <img
-      src="https://gravatar.com/avatar/b65522a6f3a6899705d119d7aa232a6d?s=150"
-      alt="Lee Donahoe"
-    />
+    <img src="https://gravatar.com/avatar/b65522a6f3a6899705d119d7aa232a6d?s=150" alt="Lee Donahoe" />
     <p>
-      When he's not literally swimming with sharks or hunting powder stashes on
-      his snowboard, you can find Lee in front of his computer designing
-      interfaces, doing front-end development, or writing some of the
-      interface-related Learn Enough tutorials.
+        When he's not literally swimming with sharks or hunting powder stashes on
+        his snowboard, you can find Lee in front of his computer designing
+        interfaces, doing front-end development, or writing some of the
+        interface-related Learn Enough tutorials.
     </p>
     <p>
-      You should follow Lee on Twitter
-      <a href="https://twitter.com/leedonahoe" target="_blank" rel="noopener"
-        >here</a
-      >.
+        You should follow Lee on Twitter
+        <a href="https://twitter.com/leedonahoe" target="_blank" rel="noopener">here</a>.
     </p>
     <h3>Nick Merwin</h3>
-    <img
-      src="https://gravatar.com/avatar/e2d6ce2ba5c1b6d674ae8ff2b3b45d23?s=150"
-      alt="Nick Merwin"
-    />
+    <img src="https://gravatar.com/avatar/e2d6ce2ba5c1b6d674ae8ff2b3b45d23?s=150" alt="Nick Merwin" />
     <p>
-      You may have seen him shredding guitar live with Capital Cities on Jimmy
-      Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true nerd at
-      heart. He's just as happy shredding well-spec'd lines of code from a tour
-      bus as he is from his kitchen table.
+        You may have seen him shredding guitar live with Capital Cities on Jimmy
+        Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true nerd at
+        heart. He's just as happy shredding well-spec'd lines of code from a tour
+        bus as he is from his kitchen table.
     </p>
     <p>
-      You should follow Nick on Twitter
-      <a href="https://twitter.com/nickmerwin" target="_blank" rel="noopener"
-        >here</a
-      >.
+        You should follow Nick on Twitter
+        <a href="https://twitter.com/nickmerwin" target="_blank" rel="noopener">here</a>.
     </p>
-  </body>
+</body>
+
 </html>
