--- a/moby_dick.html
+++ b/moby_dick.html
@@ -6,22 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moby Dick</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
 
-    <div>
-        <a href="index.html">Home</a>
-        <a href="tags.html">HTML Tags</a>
-        <a href="moby_dick.html">Moby Dick</a>
-      </div>
-
-    <header>
+    <div id="main-nav" class="nav-menu">
+        <a href="index.html" class="single-a">Home</a>
+        <a href="tags.html" class="nav-spacing">HTML Tags</a>
+        <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
+    </div>
+  
+    <header style="text-align: center; margin: 0 0 40px;">
         <h1>A Softcover Book Report</h1>
         <h2>Moby-Dick (or, The Whale)</h2>
     </header>
 
-    <div>
+    <div style="width: 500px; margin: 0 auto;">
         <p>
             The <a href="https://www.softcover.io/">Softcover</a> publishing platform was designed mainly for ebooks
             like the <a href="https://railstutorial.org/book"><em>Ruby on Rails Tutorial</em> book</a> and <a
@@ -31,47 +32,49 @@
             American literature.
         </p>
     </div>
-    <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg"><img src="img/sperm_whales.jpg"
-            alt="sperm whale in the ocean"></a>
+    <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
+    <img src="img/sperm_whales.jpg" alt="sperm whale in the ocean" style="display: block; margin: 0 auto;">
+    </a>
 
-    <div>
+    <div style="width: 500px; margin: 20px auto; padding: 30px; background-color: #fafafa;">
 
         <h3>Moby-Dick: A classic tale of the sea</h3>
 
         <a href="https://www.softcover.io/read/6070fb03/moby-dick" target="_blank" rel="noopener">
-            <img src="img/moby_dick.png" alt="Moby Dick">
+            <img src="img/moby_dick.png" alt="Moby Dick" height="200px" style="float: left; margin: 0 40px 0 0;">
         </a>
-
+        
         <p>
             <a href="https://www.softcover.io/read/6070fb03/moby-dick" target="_blank" rel="noopener">
             <em>Moby-Dick</em></a>
             by Herman Melville begins with these immortal words:
         </p>
 
-        <blockquote>
+        <blockquote style="font-style: italic; font-size: 20px;">
             <p>
-                <span>Call me Ishmael.</span> Some years ago-never mind how long precisely-having little or no money in my purse, and nothing particular to interest me on shore, i thought i would sail about a little and see the watery part of the world. It is a way i have of driving off the spleen and regulating the circulation.
+                <span style="font-style: normal; font-size: 24px; font-weight: bold; color: #ff0000;">Call me Ishmael.</span> Some years ago-never mind how long precisely-having little or no money in my purse, and nothing particular to interest me on shore, i thought i would sail about a little and see the watery part of the world. It is a way i have of driving off the spleen and regulating the circulation.
             </p>
         </blockquote>
 
         <p>After driving off his spleen (which <em>can't</em> be good for you), Ishmael then goes on in much the same vein for approximately one jillion pages. The only thing bigger than Moby Dick (who-<em>spoiler alert!</em>-is a giant white whale) is the book itself.
         </p>
+   
+
+        <h4>Our top 3 favorite things about Moby Dick</h4>
+
+        <ol>
+            <li>Vengeful whale</li>
+            <li>Salty sailors</li>
+            <li>The names "Queequeg" and "Starbuck"</li>
+        </ol>
+
+        <h4>Other things about Moby Dick</h4>
+
+        <ul>
+            <li>Chapter after chapter (after chapter) of meticulous detail about whaling</li>
+            <li>The story pretty much <a href="https://en.wikipedia.org/wiki/Essex_(whaleship)" target="_blank" rel="noopener">happened in real life</a></li>
+            <li>Mad sea captains are fun</li>
+        </ul>
     </div>
-
-    <h4>Our top 3 favorite things about Moby Dick</h4>
-
-    <ol>
-        <li>Vengeful whale</li>
-        <li>Salty sailors</li>
-        <li>The names "Queequeg" and "Starbuck"</li>
-    </ol>
-
-    <h4>Other things about Moby Dick</h4>
-
-    <ul>
-        <li>Chapter after chapter (after chapter) of meticulous detail about whaling</li>
-        <li>The story pretty much <a href="https://en.wikipedia.org/wiki/Essex_(whaleship)" target="_blank" rel="noopener">happened in real life</a></li>
-        <li>Mad sea captains are fun</li>
-    </ul>
 </body>
 </html>
