--- a/tags.html
+++ b/tags.html
@@ -1,69 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tags</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
 
-    <div>
-        <a href="index.html">Home</a>
-        <a href="tags.html">HTML Tags</a>
-        <a href="moby_dick.html">Moby Dick</a>
-      </div>
+    <div id="main-nav" class="nav-menu">
+        <a href="index.html" class="single-a">Home</a>
+        <a href="tags.html" class="nav-spacing">HTML Tags</a>
+        <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
+    </div>
+
 
     <h1>Important HTML tags</h1>
 
     <img src="img/trooper.jpg" alt="Tagged Astronaut">
-<p>
-    This page is designed as a quick reference for some of the common tags covered in <a href="https://learnenough.com/html"><em>here</em></a>. In the process of making it, we'll learn how to make HTML <em>tables</em> via <code>table</code> and related tags.
-</p>
-<p>
-    The tables below don't include all HTML tags, but they do list many of the most important ones.
-</p>
+    <p>
+        This page is designed as a quick reference for some of the common tags covered in <a
+            href="https://learnenough.com/html"><em>here</em></a>. In the process of making it, we'll learn how to make
+        HTML <em>tables</em> via <code>table</code> and related tags.
+    </p>
+    <p>
+        The tables below don't include all HTML tags, but they do list many of the most important ones.
+    </p>
     <h2>Block Elements</h2>
     <table>
         <tr>
             <th>Tag</th>
             <th>Name</th>
             <th>Purpose</th>
+            <th>Example</th>
+            <th>Result</th>
         </tr>
         <tr>
             <td><code>h1</code>&ndash;<code>h6</code></td>
             <td>headings</td>
             <td>include a heading (levels 1&ndash;6)</td>
+            <td><code>&lt;h1&gt;title&lt;/h1&gt;</code></td>
+            <td>
+                <h1>title</h1>
+            </td>
         </tr>
         <tr>
             <td><code>p</code></td>
             <td>paragraph</td>
             <td>include a paragraph of text</td>
+            <td><code>&lt;p&gt;text here&lt;/p&gt;</code></td>
+            <td>
+                <p>text here</p>
+            </td>
         </tr>
         <tr>
             <td><code>table</code></td>
             <td>table</td>
             <td>include a table</td>
+            <td><code>&lt;table&gt;th, tr and td here&lt;/table&gt;</code></td>
+            <td>
+                <table>
+                    <th>table head</th>
+                    <tr>
+                        <td>table data</td>
+                    </tr>
+                </table>
+            </td>
         </tr>
         <tr>
             <td><code>tr</code></td>
             <td>table row</td>
             <td>include a row of data</td>
+            <td><code>&lt;tr&gt;table data here&lt;/tr&gt;</code></td>
+            <td>
+                <table>
+                    <th>table head</th>
+                    <tr>
+                        <td>td inside a tr</td>
+                    </tr>
+                </table>
+            </td>
         </tr>
         <tr>
             <td><code>th</code></td>
             <td>table header</td>
             <td>make a table header</td>
+            <td><code>&lt;th&gt;table head here&lt;/th&gt;</code></td>
+            <td>
+                <table>
+                    <th>table head</th>
+                </table>
+            </td>
         </tr>
         <tr>
             <td><code>td</code></td>
             <td>table data</td>
             <td>include a table data cell</td>
+            <td><code>&lt;tr&gt;table data here&lt;/tr&gt;</code></td>
+            <td>
+                <table>
+                    <th>table head</th>
+                    <tr>
+                        <td>td inside a tr</td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td><code>ol</code></td>
+            <td>Ordered list</td>
+            <td>defines an ordered list</td>
+            <td><code>&lt;ol&gt;one or multiple li here&lt;/ol&gt;</code></td>
+            <td>
+                <ol>
+                    <li>list item</li>
+                    <li>list item</li>
+                    <li>list item</li>
+                </ol>
+            </td>
+        </tr>
+        <tr>
+            <td><code>ul</code></td>
+            <td>Unordered list</td>
+            <td>defines an unordered (bulleted) list</td>
+            <td><code>&lt;ul&gt;one or multiple li here&lt;/ul&gt;</code></td>
+            <td>
+                <ul>
+                    <li>list item</li>
+                    <li>list item</li>
+                    <li>list item</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <td><code>header</code></td>
+            <td>header</td>
+            <td>container for introductory content or a set of navigational links</td>
+            <td><code>&lt;header&gt;content here&lt;/header&gt;</code></td>
+            <td>
+                <header>content here</header>
+            </td>
+        </tr>
+        <tr>
+            <td><code>div</code></td>
+            <td>div</td>
+            <td>define a division or a section</td>
+            <td><code>&lt;div&gt;content here&lt;/div&gt;</code></td>
+            <td>
+                <div>div content here</div>
+            </td>
+        </tr>
+        <tr>
+            <td><code>html</code></td>
+            <td>html</td>
+            <td>is the container for all other HTML elements </td>
+            <td><code>&lt;html&gt;HTML elements&lt;/html&lt;</code></td>
+            <td>
+                <html>content
+
+                </html>
+            </td>
+        </tr>
+        <tr>
+            <td><code>head</code></td>
+            <td>head</td>
+            <td>is a container for metadata </td>
+            <td><code>&lt;head&gt;metadata&lt;/head&gt;</code></td>
+            <td>
+
+                <head>metadata</head>
+            </td>
+        </tr>
+        <tr>
+            <td><code>body</code></td>
+            <td>body</td>
+            <td>contains all the contents of an HTML document</td>
+            <td><code>&lt;body&gt;HTML tags&lt;/body&gt;</code></td>
+            <td>
+
+                <body>tags here</body>
+            </td>
         </tr>
     </table>
 
     <h2>Inline Elements</h2>
-
     <table>
         <tr>
             <th>Tags</th>
@@ -108,59 +231,52 @@
             <td><code>insert code here</code></td>
         </tr>
         <tr>
-            <td><code>header</code></td>
-            <td>header</td>
-            <td>container for introductory content or a set of navigational links</td>
-            <td><code>&lt;header&gt;content here&lt;/header&gt;</code></td>
-            <td><header>content here</header></td>
-        </tr>
-        <tr>
-            <td><code>div</code></td>
-            <td>div</td>
-            <td>define a division or a section</td>
-            <td><code>&lt;div&gt;content here&lt;/div&gt;</code></td>
-            <td><div>div content here</div></td>
-        </tr>
-        <tr>
             <td><code>span</code></td>
             <td>span</td>
             <td>inline container used to mark up a part of a text</td>
             <td><code>&lt;span&gt;text here&lt;/span&gt;</code></td>
             <td><span>text here</span></td>
         </tr>
+    </table>
+
+    <h2>List item</h2>
+    <table>
         <tr>
-            <td><code>ol</code></td>
-            <td>Ordered list</td>
-            <td>defines an ordered list</td>
-            <td><code>&lt;ol&gt;one or multiple li here&lt;/ol&gt;</code></td>
-            <td>
-                <ol>
-                    <li>list item</li>
-                    <li>list item</li>
-                    <li>list item</li>
-                </ol>
-            </td>
-        </tr>
-        <tr>
-            <td><code>ul</code></td>
-            <td>Unordered list</td>
-            <td>defines an unordered (bulleted) list</td>
-            <td><code>&lt;ul&gt;one or multiple li here&lt;/ul&gt;</code></td>
-            <td>
-                <ul>
-                    <li>list item</li>
-                    <li>list item</li>
-                    <li>list item</li>
-                </ul>
-            </td>
+            <th>Tags</th>
+            <th>Name</th>
+            <th>Purpose</th>
+            <th>Example</th>
+            <th>Result</th>
         </tr>
         <tr>
             <td><code>li</code></td>
             <td>List item</td>
             <td>defines a list item</td>
             <td><code>&lt;li&gt;List item inside&lt;/li&gt;</code></td>
-            <td><li>List item</li></td>
+            <td>
+                <li>List item</li>
+            </td>
         </tr>
     </table>
+
+    <h2>No display</h2>
+    <table>
+        <tr>
+            <td><code>title</code></td>
+            <td>title</td>
+            <td>defines the title of the document</td>
+            <td><code>&lt;title&gt;title&lt;/title&gt;</code></td>
+            <td>Title of the document</td>
+        </tr>
+        <tr>
+            <td><code>meta</code></td>
+            <td>meta</td>
+            <td>defines metadata about an HTML document</td>
+            <td><code>&lt;meta charset="UTF-8"&gt;</code></td>
+            <td></td>
+        </tr>
+    </table>
+
 </body>
+
 </html>
