--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             now.</a>
     </p>
     <p>
-        <a href="https://twitter.com/learnenough" target="_blank" rel="noopener" style="text-decoration: none">
+        <a href="https://twitter.com/learnenough" target="_blank" rel="noopener" class="image-link">
             <img src="./img/twitterLogoSmall.png" alt="twitterLogo" />
         </a>
         You should follow Learn Enough on Twitter
@@ -53,7 +53,7 @@
         perhaps none more so than this one:
     </p>
 
-    <blockquote style="padding: 2px 20px; background: #d8d0d0;">
+    <blockquote class="quote-index">
         <p><em>Don't believe every quote you read on the Internet.</em>
             <br>
             &ndash;Abraham Lincoln
@@ -75,7 +75,7 @@
         be found at
         <a href="https://www.learnenough.com/" target="“_blank”" rel="”noopener”">learnenough.com</a>.
     </p>
-    <h2>Founders</h2>
+    <h2 id="founders">Founders</h2>
     <h3>Michael Hartl</h3>
     <img src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150" alt="Michael Hartl" />
     <p>
