--- a/moby_dick.html
+++ b/moby_dick.html
@@ -17,12 +17,12 @@
         <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
     </div>
   
-    <header style="text-align: center; margin: 0 0 40px;">
+    <header class="header-moby-dick">
         <h1>A Softcover Book Report</h1>
         <h2>Moby-Dick (or, The Whale)</h2>
     </header>
 
-    <div style="width: 500px; margin: 0 auto;">
+    <div>
         <p>
             The <a href="https://www.softcover.io/">Softcover</a> publishing platform was designed mainly for ebooks
             like the <a href="https://railstutorial.org/book"><em>Ruby on Rails Tutorial</em> book</a> and <a
@@ -33,10 +33,10 @@
         </p>
     </div>
     <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-    <img src="img/sperm_whales.jpg" alt="sperm whale in the ocean" style="display: block; margin: 0 auto;">
+    <img src="img/sperm_whales.jpg" alt="sperm whale in the ocean" class="whale-image">
     </a>
 
-    <div style="width: 500px; margin: 20px auto; padding: 30px; background-color: #fafafa;">
+    <div class="book-cover-area">
 
         <h3>Moby-Dick: A classic tale of the sea</h3>
 
@@ -50,9 +50,9 @@
             by Herman Melville begins with these immortal words:
         </p>
 
-        <blockquote style="font-style: italic; font-size: 20px;">
+        <blockquote class="quote-moby-dick">
             <p>
-                <span style="font-style: normal; font-size: 24px; font-weight: bold; color: #ff0000;">Call me Ishmael.</span> Some years ago-never mind how long precisely-having little or no money in my purse, and nothing particular to interest me on shore, i thought i would sail about a little and see the watery part of the world. It is a way i have of driving off the spleen and regulating the circulation.
+                <span class="span-moby-dick-quote">Call me Ishmael.</span> Some years ago-never mind how long precisely-having little or no money in my purse, and nothing particular to interest me on shore, i thought i would sail about a little and see the watery part of the world. It is a way i have of driving off the spleen and regulating the circulation.
             </p>
         </blockquote>
 
